--- a/project-4.html
+++ b/project-4.html
@@ -40,6 +40,6 @@
       </div>
     </div>
     <!-- SCRIPT -->
-    <script src="./js//project-4.js"></script>
+    <script src="./js/project-4.js"></script>
   </body>
 </html>
